modules/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "argocd.k8s.misumi-sumi.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: misumi-sumi-com-tls
      allowedRoutes:
        namespaces:
          from: All
