modules/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: kube-system
spec:
  hostnames:
    - "argocd.k8s.misumi-sumi.com"
  parentRefs:
    - name: argocd-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
